--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -1,10 +1,14 @@
+@use '../util/' as u;
+
 .grid {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
   gap: 40px;
+  width: min(100% - 40px, 1000px);
+  margin-inline: auto;
 
-  @media (min-width: 900px) {
+  @include u.breakpoint(large) {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto;
   }
@@ -19,5 +23,9 @@
 
   &__sidebar {
     background-color: hsl(300, 100%, 30%);
+    @include u.breakpoint-down(medium) {
+        text-align: center;
+    }
+   
   }
 }
